sao/src/theme/coog/sao.less
@color-white:           white;
@color-lightest-grey:   #f9f9f9; //coogcolor
@color-lighter-grey:    #c0c0c0; //coogcolor
@color-grey:            #8c8c8c; //coogcolor
@color-median-grey:     #777;
@color-black:           #46423d; //coogcolor
@color-blue:            #0094d2; //coogcolor
@color-light-blue:      #00aee5; //coogcolor
@color-lighter-blue:    #a2daf4; //coogcolor
@color-lightest-blue:   #E7F4FC; //coogcolor
@color-lightest-red:    #ffd0cd;

@tree-line-border-top:  0px;

@brand-primary:         @color-blue;
@coog-box-shadow:       0 1px 4px rgba(0, 0, 0, 0.3);

.coog-readonly-field-mixin {
    background-color:     @color-lightest-grey;
    border-top-left-radius:   10px;
    border-top-right-radius:   10px;
}

.coog-xxx2many-header-mixin {
    color:                  @color-black;
    background-color:       @color-lighter-blue;
    border-radius:          2px;
    border-width:           0px;
    border-left:            unset;
    border-top:             unset;
    border-right:           unset;
    box-shadow:             @coog-box-shadow;
    padding:                0px;
}

.coog-xxx2many-body-mixin {
    // Remove padding from panel-body so trees are more compact
    padding:                0px;

    // Hide selection column of non-act window trees
    * > col.selection-state {
        width:              0px;
    }

    .panel {
        margin:             0px 15px 0px 15px
    }
}

///////////////////////////////////////////////////////////////////////////////
// Tree views
///////////////////////////////////////////////////////////////////////////////

// Use variable for border width
.treeview > table.tree > tbody > tr > td {
    border-top-width:   @tree-line-border-top;
}

// Smaller lines in tree views
.treeview > table.tree > tbody > tr > td {
    padding-top:        2px;
    padding-bottom:     2px;
}

// More discrete checkboxes for selection in trees
.treeview > table.tree,table.tree-condensed > thead,tbody > tr > td.selection-state > input {
    & input[type="checkbox"] {
        margin-top:     @tree-line-border-top;
        margin-bottom:  0px;
    }

    & :before {
        border-color:   @color-lightest-blue !important;
    }

    & tr:hover :before {
        border-color:   @color-grey !important;
    }

    & tr.selected,thead :before {
        border-color:   @color-grey !important;
    }
}

// Make tree view headers a little more visible
.treeview > table.tree > thead > tr:first-child th {
    background-color:       @color-lightest-blue;
}

// Remove small scrollbar div above list header
div.scrollbar:has(+ div.treeview) {
    display:                none;
}

///////////////////////////////////////////////////////////////////////////////
// Top Menu
///////////////////////////////////////////////////////////////////////////////
//      - lighter color
//      - less vertical padding
nav.toolbar.panel-heading {
    background-color:       @color-lightest-blue;
    padding:                0px 10px 0px 0px;

    div.container-fluid.navbar-inverse {
        background-color:       @color-lightest-blue;
        padding-left:           0px;

        > * > .navbar-brand.dropdown-toggle {
            color:              @color-black;
        }
    }
}

///////////////////////////////////////////////////////////////////////////////
// One2Many
///////////////////////////////////////////////////////////////////////////////
div.form-item.form-one2many {
    padding-bottom:                 15px;

    // Remove all padding for one2many without a toolbar
    :has(> div.form-one2many > div.form-one2many-content.coog-hidden-toolbar) {
        padding:          0px;
    }

    // Remove outer boxing for one2many without a toolbar
    div.form-one2many:has(> div.form-one2many-content.coog-hidden-toolbar) {
        box-shadow:       none;
        margin-bottom:    0px;
    }

    // But set an inner boxing if it is a tree-view
    div.form-one2many > div.form-one2many-content.coog-hidden-toolbar:has(
        > div.screen-container > div.content-box > div > div.treeview) {
        box-shadow:             0 1px 4px rgba(0, 0, 0, 0.3);
        margin-bottom: 5px;
        margin-top: 5px;
    }

    > div.form-one2many.panel {
        margin-bottom:          10px;

        > div.form-one2many-menu.panel-heading {
            .coog-xxx2many-header-mixin()
        }

        > div.form-one2many-content.panel-body {
            .coog-xxx2many-body-mixin()
        }
    }
}

///////////////////////////////////////////////////////////////////////////////
// Many2Many
///////////////////////////////////////////////////////////////////////////////
div.form-item.form-many2many {
    padding-bottom:                 15px;

    > div.form-many2many.panel {
        margin-bottom:          10px;

        > div.form-many2many-menu.panel-heading {
            .coog-xxx2many-header-mixin()
        }

        > div.form-many2many-content.panel-body {
            .coog-xxx2many-body-mixin()
        }
    }
}

///////////////////////////////////////////////////////////////////////////////
// Dict fields
///////////////////////////////////////////////////////////////////////////////

div.form-dict {
    margin-bottom:              5px;

    .readonly {
        input.form-control, select.form-control {
            .coog-readonly-field-mixin();
        }
    }

    > div.form-dict-heading {
        background-color:        @color-lightest-blue;
        color:                   @color-black;
    }

    > div.form-dict-body {
        padding:                 5px 15px 0px 15px;

        > div.form-dict-container {
            > div.form-group {
                margin-bottom:       5px;
            }
        }
    }
}
///////////////////////////////////////////////////////////////////////////////
// Groups
///////////////////////////////////////////////////////////////////////////////

div.form-item.form-group_:has(> fieldset.form-group_ > div.form-group_-legend) {
    padding-bottom:             15px;

    > fieldset.form-group_ {
        box-shadow:                 @coog-box-shadow;
        margin-bottom:              10px;

        > div.form-group_-legend {
            border-top-left-radius:    3px;
            border-top-right-radius:   3px;
            border-bottom-width:       0px;
            background-color:          @color-lightest-blue;
            margin-bottom:             5px;
            padding:                   2px 7px 2px 7px;
        }
    }
}

///////////////////////////////////////////////////////////////////////////////
// Misc fields
///////////////////////////////////////////////////////////////////////////////

div.form-many2one, div.form-selection, div.form-date, div.form-char {
    padding:                0px 15px 0px 0px;

    .readonly {
        .input-group, select.form-control:disabled {
            .coog-readonly-field-mixin();
        }
    }
}

div.form-selection select.form-control {
    padding:              0px 5px 0px 5px;
}

div.form-text {
    padding:                0px 15px 0px 15px;

    .readonly {
        textarea.form-control {
            .coog-readonly-field-mixin();
        }
    }
}

div.form-boolean > input[type=checkbox].input-checkbox {
    box-shadow:            none;
}

div.form-boolean > input[type=checkbox].input-checkbox.form-control[readonly] {
    border-bottom:     none;
}

///////////////////////////////////////////////////////////////////////////////
// Rule engine
///////////////////////////////////////////////////////////////////////////////

div.readonly div.CodeMirror-sizer {
    background-color: lightgrey;
}

div.CodeMirror {
    height: 460px;
}

